Moved majority of protocol logic to OrderResource. POST /orders still left
